# urbackup_backend

./: .gitignore  .travis.yml  AUTHORS  AcceptThread.cpp  AcceptThread.h  Client.cpp  Client.h  CompiledServer.sln  CompiledServer.vcxproj  CompiledServer.vcxproj.filters  CompiledServerVS12.vcxproj  CompiledServerVS12.vcxproj.filters  Condition_boost.cpp  Condition_boost.h  Condition_lin.cpp  Condition_lin.h  Condition_std.cpp  Condition_std.h  DBSettingsReader.cpp  DBSettingsReader.h  Database.cpp  Database.h  DatabaseCursor.cpp  DatabaseCursor.h  FileSettingsReader.cpp  FileSettingsReader.h  Helper_win32.h  LoadbalancerClient.cpp  LoadbalancerClient.h  LookupService.cpp  LookupService.h  Makefile.am  Makefile.am_client  Makefile.am_server  MemoryPipe.cpp  MemoryPipe.h  MemorySettingsReader.cpp  MemorySettingsReader.h  Mutex_boost.cpp  Mutex_boost.h  (+125 more)
bdbplugin/: BDBFactory.cpp  BDBFactory.h  Makefile.am  bdbplugin.vcxproj  bdbplugin.vcxproj.filters  configure.ac  dllmain.cpp
bdbplugin/m4/: ax_berkeley_db.m4  ax_berkeley_db_sql.m4  bdb.m4
clientctl/: Connector.cpp  Connector.h  Makefile.am  clientctl.vcxproj  clientctl.vcxproj.filters  configure.ac  jsoncpp.cpp  main.cpp  tcpstack.cpp  tcpstack.h
cryptoplugin/: AESDecryption.cpp  AESDecryption.h  AESEncryption.cpp  AESEncryption.h  AESGCMDecryption.cpp  AESGCMDecryption.h  AESGCMEncryption.cpp  AESGCMEncryption.h  CryptoFactory.cpp  CryptoFactory.h  ECDHKeyExchange.cpp  ECDHKeyExchange.h  ECIES.cpp  ECIES.h  IAESDecryption.h  IAESEncryption.h  IAESGCMDecryption.h  IAESGCMEncryption.h  ICryptoFactory.h  IECDHKeyExchange.h  IECIES.h  IZlibCompression.h  IZlibDecompression.h  Makefile.am  Makefile.am_client  Makefile.am_server  ZlibCompression.cpp  ZlibCompression.h  ZlibDecompression.cpp  ZlibDecompression.h  configure.ac  configure.ac_client  configure.ac_server  cryptoplugin.vcxproj  cryptoplugin.vcxproj.filters  cryptopluginVS12.vcxproj  cryptopluginVS12.vcxproj.filters  cryptopp_inc.h  dllmain.cpp  pluginmgr.cpp  (+1 more)
cryptoplugin/m4/: cryptopp.m4
cryptoplugin/src/: Makefile.am  configure.ac  libcryptopp.pc.in
downloadplugin/: DownloadFactory.cpp  DownloadFactory.h  DownloadThread.cpp  DownloadThread.h  IDownloadFactory.h  IFileDownload.h  Makefile.am  configure.ac  data.cpp  data.h  dllmain.cpp  download2.cpp  download2.h  downloadplugin.vcxproj  downloadplugin.vcxproj.filters  pluginmgr.cpp  pluginmgr.h  socket_header.h
fileservplugin/: CClientThread.cpp  CClientThread.h  CTCPFileServ.cpp  CTCPFileServ.h  CUDPThread.cpp  CUDPThread.h  CampusThread.cpp  CampusThread.h  ChunkSendThread.cpp  ChunkSendThread.h  CriticalSection.cpp  CriticalSection.h  FileMetadataPipe.cpp  FileMetadataPipe.h  FileServ.cpp  FileServ.h  FileServFactory.cpp  FileServFactory.h  IFileMetadataPipe.h  IFileServ.cpp  IFileServ.h  IFileServFactory.h  IPermissionCallback.h  IPipeFileExt.h  Makefile.am  PipeFile.cpp  PipeFile.h  PipeFileBase.cpp  PipeFileBase.h  PipeFileExt.cpp  PipeFileExt.h  PipeFileTar.cpp  PipeFileTar.h  PipeFileUnix.cpp  PipeFileWin.cpp  PipeSessions.cpp  PipeSessions.h  bufmgr.cpp  bufmgr.h  chunk_settings.h  (+23 more)
fuseplugin/: Makefile.am  configure.ac  dllmain.cpp
httpserver/: HTTPAction.cpp  HTTPAction.h  HTTPClient.cpp  HTTPClient.h  HTTPFile.cpp  HTTPFile.h  HTTPProxy.cpp  HTTPProxy.h  HTTPService.cpp  HTTPService.h  HTTPSocket.cpp  HTTPSocket.h  IndexFiles.cpp  IndexFiles.h  MIMEType.cpp  MIMEType.h  Makefile.am  configure.ac  dllmain.cpp  httpserver.vcxproj  httpserver.vcxproj.filters  httpserverVS12.vcxproj  httpserverVS12.vcxproj.filters
piped_process/: IPipedProcess.h  IPipedProcessFactory.h  Makefile.am  PipedProcessFactory.cpp  PipedProcessFactory.h  configure.ac  dllmain.cpp  getpid.cpp  piped_process.cpp  piped_process.h  piped_process.vcxproj  piped_process.vcxproj.filters  piped_process_lin.cpp  piped_process_win.cpp  pluginmgr.cpp  pluginmgr.h
pychart/: IPychart.h  IPychartFactory.h  Makefile.am  Pychart.cpp  Pychart.h  PychartFactory.cpp  PychartFactory.h  configure.ac  dllmain.cpp  pluginmgr.cpp  pluginmgr.h  pychart.py  pychart.vcxproj  pychart.vcxproj.filters  setup_pychart.py  test.cpp
snapshot_helper/: Makefile.am  backup.diff  configure.ac  main.cpp  main.cpp.rej  patch-snapshot__helper_main.cpp  snapshot_helper.vcxproj  snapshot_helper.vcxproj.filters  tmp.diff
urbackupclient/: ChangeJournalWatcher.cpp  ChangeJournalWatcher.h  ClientHash.cpp  ClientHash.h  ClientSend.cpp  ClientSend.h  ClientService.cpp  ClientService.h  ClientServiceCMD.cpp  DirectoryWatcherThread.cpp  DirectoryWatcherThread.h  DocanyMount.cpp  DocanyMount.h  FileMetadataDownloadThread.cpp  FileMetadataDownloadThread.h  FilesystemManager.cpp  FilesystemManager.h  ImageThread.cpp  ImageThread.h  InternetClient.cpp  InternetClient.h  LocalBackup.cpp  LocalBackup.h  LocalFileBackup.cpp  LocalFileBackup.h  LocalFullFileBackup.cpp  LocalFullFileBackup.h  LocalIncrFileBackup.cpp  LocalIncrFileBackup.h  Makefile.am  ParallelHash.cpp  ParallelHash.h  PersistentOpenFiles.cpp  PersistentOpenFiles.h  RansomwareCanary.cpp  RansomwareCanary.h  RestoreDownloadThread.cpp  RestoreDownloadThread.h  RestoreFiles.cpp  RestoreFiles.h  (+47 more)
urbackupserver/: Alerts.cpp  Alerts.h  Backup.cpp  Backup.h  ChangeLog  ChunkPatcher.cpp  ChunkPatcher.h  ClientMain.cpp  ClientMain.h  ContinuousBackup.cpp  ContinuousBackup.h  DatabaseFileCache.h  DataplanDb.cpp  DataplanDb.h  FileBackup.cpp  FileBackup.h  FileCache.cpp  FileCache.h  FileIndex.cpp  FileIndex.h  FileMetadataDownloadThread.cpp  FileMetadataDownloadThread.h  FullFileBackup.cpp  FullFileBackup.h  ImageBackup.cpp  ImageBackup.h  ImageMount.cpp  ImageMount.h  IncrFileBackup.cpp  IncrFileBackup.h  InternetServiceConnector.cpp  InternetServiceConnector.h  LMDBFileIndex.cpp  LMDBFileIndex.h  LocalBackup.cpp  LocalBackup.h  LogReport.cpp  LogReport.h  MDBFileCache.cpp  MDBFileCache.h  (+98 more)
urlplugin/: IUrlFactory.h  Makefile.am  UrlFactory.cpp  UrlFactory.h  configure.ac  dllmain.cpp  pluginmgr.cpp  pluginmgr.h  urlplugin.vcxproj  urlplugin.vcxproj.filters  urlpluginVS12.vcxproj  urlpluginVS12.vcxproj.filters
(+955 files in other folders)
