lib_LTLIBRARIES = libdownloadplugin.la
libdownloadplugin_la_SOURCES = dllmain.cpp ../stringtools.cpp pluginmgr.cpp data.cpp download2.cpp DownloadFactory.cpp DownloadThread.cpp
noinst_HEADERS = DownloadFactory.h DownloadThread.h IFileDownload.h download2.h socket_header.h data.h IDownloadFactory.h pluginmgr.h
AM_CXXFLAGS = -DLINUX