lib_LTLIBRARIES = liburbackupclient_fileservplugin.la
liburbackupclient_fileservplugin_la_SOURCES = dllmain.cpp ../stringtools.cpp bufmgr.cpp CampusThread.cpp CClientThread.cpp CriticalSection.cpp CTCPFileServ.cpp CUDPThread.cpp data.cpp download.cpp FileServ.cpp FileServFactory.cpp log.cpp main.cpp map_buffer.cpp pluginmgr.cpp ../urbackupcommon/fileclient/tcpstack.cpp
noinst_HEADERS = bufmgr.h CUDPThread.h FileServFactory.h IFileServ.h packet_ids.h socket_header.h CampusThread.h CriticalSection.h data.h FileServ.h log.h pluginmgr.h ../urbackupcommon/fileclient/tcpstack.h CClientThread.h CTCPFileServ.h download.h IFileServFactory.h map_buffer.h settings.h types.h chunk_settings.h
AM_CXXFLAGS = -DLINUX