lib_LTLIBRARIES = liburbackupserver_httpserver.la
liburbackupserver_httpserver_la_SOURCES = dllmain.cpp ../stringtools.cpp IndexFiles.cpp HTTPAction.cpp HTTPFile.cpp HTTPService.cpp HTTPClient.cpp HTTPProxy.cpp MIMEType.cpp
noinst_HEADERS = HTTPAction.h HTTPClient.h HTTPFile.h HTTPProxy.h HTTPService.h IndexFiles.h MIMEType.h
AM_CXXFLAGS = -DLINUX